<resources>
    <string name="app_name">app1</string>
    <string name="register">Регистрация</string>
    <string name="login">Введите логин</string>
    <string name="pass">Введите пароль</string>
    <string name="email">Введите email</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="auth">Авторизация</string>
    <string name="do_auth">Авторизоваться</string>
    <string name="back_to_sign_in">Вернуться на страницу входа</string>
    <string name="do_reg">Зарегистрируйтесь, если нет аккаунта</string>
    <string name="start_img_descr">Красивая картинка</string>
    <string name="continue_">Продолжить</string>
    <string name="other">Это другое..</string>
    <string name="telega">Телега</string>
    <string name="mems">Мемограмм</string>
    <string name="chats">Чатики</string>
    <string name="message">Сообщение</string>
    <string name="date_of_message">Дата</string>
    <string name="sender_of_message">Отправитель</string>
    <string name="profile_img">Изображение профиля</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_data">Update</string>
    <string name="test_api">Test API</string>
    <string name="enter_email">Enter email</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="settings">Settings</string>
    <string name="btn_settings">Settings</string>
    <string name="save">Save</string>
    <string name="file_status_not_found">File status: Unknown</string>
    <string name="file_status_exists">File status: Exist</string>
    <string name="backup_status_not_found">Backup status: Unknown</string>
    <string name="backup_status_exists">Backup status: Exist</string>
    <string name="delete">Delete</string>
    <string name="backup">Backup</string>
    <string name="backup_status_unknown">backup_status_unknown</string>
    <string name="btnBack">Назад</string>
    <string name="btnNext">Вперед</string>
</resources>