<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#201E28"
    tools:context=".SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/auth" />

    <EditText
        android:id="@+id/user_login_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:textColor="#fdfdfd"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/user_pass_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:textColor="#fdfdfd"
        android:hint="@string/pass" />

    <Button
        android:id="@+id/button_auth"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#5e4602"
        android:backgroundTint="#e2a600"
        android:text="@string/do_auth" />

    <TextView
        android:id="@+id/do_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="#fdfdfd"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="12sp"
        android:text="@string/do_reg" />

</LinearLayout>